# social-inference

./: .gitignore  Dockerfile  TODO  app.js  buffer-test.js  gpu-utils.js  index.html  package-lock.json  package.json  play.py  pyproject.toml  requirements.txt  saxpy.js  serve.py  start.js  tests.py  testserver.py  tgpu.js  webgpu-info.html  webpack.config.js  webserver.py
benchmarks/: common.js  index.html  memory-benchmark.js  saxpy-benchmark.js
frontend/: appController.js  common.js  compiler.js  consoleHook.js  encoding.js  executor.js  index.html  kernel.js  kernel_builder.js  play.js  play2.js  run.js  tensorcache.js  test_kernel.js  testrunner.js  uiManager.js  worker.js
frontend/kernels/: add.wgsl  bmm.wgsl  cos.wgsl  divide.wgsl  empty.wgsl  hadamard.wgsl  matmul.wgsl  reduce_mean.wgsl  rsqrt.wgsl  silu.wgsl  sin.wgsl  softmax.wgsl  squared.wgsl  (+1 more)
inference/: __init__.py  cache.py  encoding.py  graph.py  name_scope.py  pipeline.py  queue.py  simulator.py  tensor.py  test_name_scope.py  test_pipeline.py  test_queue.py  test_simulator.py  test_util.py  worker.py
models/: __init__.py  cache.py  graph.py  llama.py  model.py  module_crawl.py  pipeline.py  queue.py  simple.py  simulator.py  tensor.py  test_cache_matchup.py  test_graph.py  test_llama_fwd.py  test_llama_model.py  test_llama_rope.py  test_pipeline.py  test_queue.py  test_simulator.py  test_util.py  utils.py
old/: app.js  index.html
phys/: index.html  package-lock.json  package.json
sim/: index.html  iphone-fleet-manager.js  iphone-worker.js  main.js  saxpy-worker.js  worker-manager.js
(+21 files in other folders)
