[project]
name = "social-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "fastapi>=0.115.12",
    "numpy>=2.2.4",
    "pudb>=2024.1.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inference"]
